[package]
name = "asami"
version = "0.1.0"
authors = ["Mariell Hoversholm <proximyst@proximyst.com>"]
edition = "2018"

[dependencies]
log = "^0.4"
simplelog = "^0.5"

failure = "^0.1"

getset = "^0.0"
derive_more = "^0.14"

void = "^1.0"

chrono = "^0.4"

typemap = "~0.3"
parking_lot = "~0.8"

ketos = "^0.11"
ketos_derive = "^0.11"

serde = { version =  "^1.0", features = ["derive"] }
serde_json = "^1.0"
toml = "^0.5"

lru_time_cache = "^0.9"

r2d2 = "^0.8"
diesel = { version = "^1.4", features = ["postgres", "extras"] }

serenity = "0.6.0-rc.0"
